syntax = "proto3";

package datacore.adapter;

option csharp_namespace = "DataCore.Adapter.Grpc";


service TagSearchService {
    rpc FindTags(FindTagsRequest) returns (stream TagDefinition);
    rpc GetTags(GetTagsRequest) returns (stream TagDefinition);
}


// Find tags
message FindTagsRequest {
    string adapter_id = 1;
    int32 page_size = 2;
    int32 page = 3;
    string name = 4;
    string description = 5;
    string units = 6;
    map<string, string> other = 7;
}


// Get tags by ID or name
message GetTagsRequest {
    string adapter_id = 1;
    repeated string tags = 2;
}


// Tag definition models

message TagIdentifier {
    string id = 1;
    string name = 2;
}

message TagDefinition {
    string id = 1;
    string name = 2;
    string category = 3;
    string description = 4;
    string units = 5;
    TagDataType data_type = 6;
    map<string, int32> states = 7;
    map<string, string> properties = 8;
}


enum TagDataType {
    NUMERIC = 0;
    TEXT = 1;
    STATE = 2;
}