syntax = "proto3";

package datacore.adapter;

import "google/protobuf/struct.proto";
import "Types.proto";

option csharp_namespace = "DataCore.Adapter.Grpc";


service TagSearchService {
    rpc FindTags(FindTagsRequest) returns (stream TagDefinition);
    rpc GetTags(GetTagsRequest) returns (stream TagDefinition);
    rpc GetTagProperties(GetTagPropertiesRequest) returns (stream AdapterProperty);
    rpc GetTagSchema(GetTagSchemaRequest) returns (GetTagSchemaResponse);
    rpc CreateTag(CreateTagRequest) returns (TagDefinition);
    rpc UpdateTag(UpdateTagRequest) returns (TagDefinition);
    rpc DeleteTag(DeleteTagRequest) returns (DeleteTagResponse);
}


// Find tags
enum FindTagsResultFields {
    FIND_TAGS_RESULT_FIELDS_BASIC_INFORMATION = 0;
    FIND_TAGS_RESULT_FIELDS_DIGITAL_STATES = 1;
    FIND_TAGS_RESULT_FIELDS_PROPERTIES = 2;
    FIND_TAGS_RESULT_FIELDS_LABELS = 4;
    FIND_TAGS_RESULT_FIELDS_SUPPORTED_FEATURES = 8;
}

message FindTagsRequest {
    string adapter_id = 1;
    int32 page_size = 2;
    int32 page = 3;
    string name = 4;
    string description = 5;
    string units = 6;
    string label = 7;
    map<string, string> other = 8;
    map<string, string> properties = 9;
    // This int32 is a combination of values defined in the FindTagsResultFields enum above.
    int32 result_fields = 10;
}


// Get tags by ID or name
message GetTagsRequest {
    string adapter_id = 1;
    repeated string tags = 2;
    map<string, string> properties = 3;
}


// Get tag property definitions
message GetTagPropertiesRequest {
    string adapter_id = 1;
    int32 page_size = 2;
    int32 page = 3;
    map<string, string> properties = 4;
}


// Get tag configuration schema
message GetTagSchemaRequest {
    string adapter_id = 1;
    map<string, string> properties = 2;
}


message GetTagSchemaResponse {
    google.protobuf.Value schema = 1;
}


// Create tag
message CreateTagRequest {
    string adapter_id = 1;
    google.protobuf.Value body = 2;
    map<string, string> properties = 3;
}


// Update tag
message UpdateTagRequest {
    string adapter_id = 1;
    string tag = 2;
    google.protobuf.Value body = 3;
    map<string, string> properties = 4;
}


// Delete tag
message DeleteTagRequest {
    string adapter_id = 1;
    string tag = 2;
    map<string, string> properties = 3;
}


message DeleteTagResponse {
    bool success = 1;
}
